--- a/src/Components/InfoGeneral/Styles/InfoGeneral.css
+++ b/src/Components/InfoGeneral/Styles/InfoGeneral.css
@@ -20,3 +20,8 @@
     flex-grow: 1;
     object-fit: cover;
   }
+
+  .carousel-item{
+    height: 500px !important;
+    object-fit:scale-down  !important;
+  }
