--- a/src/Components/EventDetails/EventDetail.css
+++ b/src/Components/EventDetails/EventDetail.css
@@ -57,3 +57,11 @@
     justify-content: center;
     background-color:rgba(243, 243, 243, 0.822);
 }
+
+.linea{
+    border-top: 1px solid rgb(187, 187, 187);
+  height: 2px;
+  max-width: 200%;
+  padding: 0;
+  margin: 20px auto 0 auto;
+}
