--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -38,3 +38,10 @@
     width: 100% !important;
 }
 
+.btn-primary{
+    background-color: rgb(55, 102, 103) !important
+}
+
+.btn-primary:hover {
+    background-color: rgb(0, 66, 91) !important;
+}
