--- a/src/Components/Filtros/Filtros.css
+++ b/src/Components/Filtros/Filtros.css
@@ -1,11 +1,37 @@
-.menudefiltros{
-    display: flex;
+.categoria{
+display: flex;
    flex-direction:row;
    justify-content: space-between;
-   border: 1px solid rgba(180, 178, 178, 0.205) ;
    align-items:  center;
+}
+
+.nombre{
+    display: flex;
+    align-items: center;
+    
+
 }
 
 .menu-input-filtro{
     margin-left:2rem;
+    justify-content: center;
+    display: auto;
+}
+
+
+.menu-buscador-input-gral{
+display: flex;
+
+
+}
+
+.col-md-8{
+    width: 100%;
+    display: auto;
+}
+
+.menudefiltros{
+  display: flex;
+align-items: center;
+   
 }
