peginado y login estetico

--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -42,3 +42,22 @@
 .button__logout{
     border-radius: 5px;
 }
+
+.foto-login{
+    width:35px;
+    height:35px;
+    border-radius: 20px;
+    margin-right: 1rem;
+}
+
+.componente-login{
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    align-items: center;
+}
+
+.texto-login{
+    text-align: center;
+    align-items: center;
+}
