--- a/src/Components/EventDetails/EventDetail.css
+++ b/src/Components/EventDetails/EventDetail.css
@@ -78,3 +78,25 @@
 }
  
  }
+
+.buttonAddCart{
+    position: relative;
+    width: 32;
+    height: 32;
+    border: none;
+    background-color: rgb(55, 102, 103)
+}
+
+.cardDetail{
+    position: relative;
+    top: 0;
+    right: 0;
+}
+
+.buttonContainer{
+    position: absolute;
+    top: 0;
+    right: 130px;
+    margin: 20px;
+    background-color: blue;
+}
