--- a/src/Components/Filtros/Filtros.css
+++ b/src/Components/Filtros/Filtros.css
@@ -32,7 +32,9 @@ display: flex;
 
 .menudefiltros{
     display: inline-flex;
-align-items: center;
-
+    align-items: center;
+    flex-wrap: wrap;
    
 }
+
+
