--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -18,6 +18,7 @@
 
     border-color: rgb(56, 102, 103) !important;
     background-color: rgb(92, 152, 89) !important;
+    color: white !important
 }
 
 .btn-primario:hover{
