se corrigieron estilos

--- a/src/Components/CartSidebar/CartSidebar.css
+++ b/src/Components/CartSidebar/CartSidebar.css
@@ -104,7 +104,7 @@
 }
 
 .btnCleanCart{
-    width: 100% !important;
+    width: 155px !important;
     background-color: #fff !important;
     color: #720026;
 
