--- a/src/Components/Historia/Historia.css
+++ b/src/Components/Historia/Historia.css
@@ -1,5 +1,6 @@
 .img-historia{
     width: 80%;
+    margin: 2%;
 }
 
 .row-contenedor-historia{
@@ -9,11 +10,11 @@
     margin-top: 5%;
     padding: 2rem !important;
     font-family: 'Baskervville' !important;
-    background-color: rgb(227, 228, 227);
+    background-color:rgba(243, 243, 243, 0.822);
 }
 
 .titulo-historia{
-    margin-bottom: 2rem !important;
+    margin-bottom: 0.5rem !important;
     align-items: flex-start !important;
     font-family: 'Baskervville' !important;
 }
@@ -31,11 +32,20 @@
     display: flex;
     flex-direction: column;
     width: 50%;
-    margin-left: 20%;
-    margin-top: 1rem;
+    margin-top: 2%; 
+    margin-left: 24%;
 }
 
 .img-historia-2{
     width: 40%;
+    margin: 2%;
+}
+
+.row2{
+    margin-top: 5%;
+}
+
+.row3{
+    margin-top: 2%;
 }
 
