--- a/src/Components/Comentarios/CommentForm.css
+++ b/src/Components/Comentarios/CommentForm.css
@@ -17,3 +17,15 @@
     flex-direction: column;
 }
 
+.boton-borrar-comentario{
+    background-color: rgb(207, 2, 2);
+    color:white;
+
+}
+
+.boton-borrar-comentario:hover{
+    background-color: rgb(123, 4, 4);
+    color:white !important;
+    border-color: white !important;
+}
+
