--- a/src/Components/Checkout/Checkout.css
+++ b/src/Components/Checkout/Checkout.css
@@ -1,3 +1,39 @@
 .cardCheckout{
-    width: 40rem !important;
+    width: 20rem !important;
+    height: 10rem !important;
+    border: solid 1px #40798c !important ;
+    border-radius: 30px !important;
+    display: grid;
+    grid-template-rows: repeat(10px);
+    gap: 2px;
+    margin: 3px;
+
+}
+
+.cardCheckout img{
+    width: 100%;
+    height: 100%;
+    aspect-ratio: 16/9;
+    border-radius: 10px;
+    object-fit:cover !important;
+    overflow: hidden !important;
+    
+}
+
+.cardCheckout :hover{
+    border-color: blueviolet !important;
+}
+
+.totalP{
+    padding: 1px;
+    background-color: #198754 !important;
+}
+
+.totalP:hover{
+    background-color: #00425B !important;
+    color:#f0f4f7 !important;
+}
+
+.btnCheck:hover{
+    background-color: #00425B !important;
 }
