--- a/src/Components/EventDetails/EventDetail.css
+++ b/src/Components/EventDetails/EventDetail.css
@@ -97,6 +97,11 @@ a{
     text-decoration: none;
 }
 
+.cantidad-entradas{
+    margin-right: 1rem;
+}
+
+
 
 @media (max-width: 1000px) {
    .contenedor-detalle-evento{
