--- a/src/Components/EventDetails/EventDetail.css
+++ b/src/Components/EventDetails/EventDetail.css
@@ -36,6 +36,8 @@
     padding-left: 5rem;
     padding-right: 5rem;
     margin-bottom: 2rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
 }
 
 
@@ -80,12 +82,16 @@
 
 .comentarios-opiniones{
     display: flex;
-   
+   margin-left: 2rem;
+   margin-right: 2rem;
 }
 
 .comentarios-todos{
     border: 1px solid rgba(196, 196, 196, 0.482);
     border-radius: 10px;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    margin-bottom: 2rem;
 }
 .div-precio-boton{
     display: flex;
