--- a/src/Components/InfoGeneral/Styles/InfoGeneral.css
+++ b/src/Components/InfoGeneral/Styles/InfoGeneral.css
@@ -19,6 +19,8 @@
     height: 100%;
     flex-grow: 1;
     object-fit: cover;
+    border-top-left-radius: 1%;
+    border-top-right-radius: 1%;
   }
 
   .carouselItem{
