--- a/src/Components/Carrousel/Carrousel.css
+++ b/src/Components/Carrousel/Carrousel.css
@@ -4,3 +4,37 @@
     width:100%;
     height:100%;
   }
+
+  .imagenCarouselEventos{
+    padding: 0;
+    margin-top: 0;
+    width:100%;
+    height: 100%;
+    aspect-ratio: 16/9;
+    object-fit:cover;
+    overflow: hidden;
+    position: relative;
+    bottom: 120px;
+    opacity: 0.9;
+    
+  }
+
+  @media screen and (max-width: 700px) {
+    .imagenCarouselEventos {
+      position: static;
+      bottom: initial;
+    }
+  }
+
+  .containerImageCarousel{
+    margin: 0 0 0 0;
+  }
+
+  .tituloeventoCarousel{
+    position: absolute;
+    top: 2%;
+    left: 5%;
+    color: whitesmoke;
+    background-color: #5c98599c;
+  }
+
