--- a/src/Components/Comentarios/FormReview.css
+++ b/src/Components/Comentarios/FormReview.css
@@ -1,6 +1,9 @@
 .form-review{
     display: flex;
     flex-direction: column;
-   
-    width: 100;
+       width: 100;
+       justify-content: center !important;
+        align-items: center !important;
 }
+
+
