--- a/src/Components/Comentarios/CommentForm.css
+++ b/src/Components/Comentarios/CommentForm.css
@@ -2,7 +2,7 @@
     display: auto;
     flex-direction: column;
     gap: 20%;
-   
+
 }
 
 .answerTextarea {
@@ -17,15 +17,35 @@
     flex-direction: column;
 }
 
-.boton-borrar-comentario{
+.boton-borrar-comentario {
     background-color: rgb(207, 2, 2);
-    color:white;
+    color: white;
 
 }
 
-.boton-borrar-comentario:hover{
+.boton-borrar-comentario:hover {
     background-color: rgb(123, 4, 4);
-    color:white !important;
+    color: white !important;
     border-color: white !important;
 }
 
+
+
+@media only screen and (min-width: 320px) and (max-width: 1000px) {
+    :where(.css-dev-only-do-not-override-ixblex).ant-list * {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        align-content: space-around;
+    }
+
+    :where(.css-dev-only-do-not-override-ixblex).ant-list .ant-list-item .ant-list-item-action {
+        flex: 0 0 auto;
+        margin-inline-start: 1px;
+        padding: 0;
+        font-size: 0;
+        list-style: none;
+    }
+}
