--- a/src/Components/Comentarios/FormReview.css
+++ b/src/Components/Comentarios/FormReview.css
@@ -1,9 +1,27 @@
-.form-review{
+.form-review {
     display: flex;
     flex-direction: column;
-       width: 100;
-       justify-content: center !important;
-        align-items: center !important;
+    width: 100;
+    justify-content: center !important;
+    align-items: center !important;
 }
 
+@media only screen and (min-width: 320px) and (max-width: 1000px) {
+    .form-review {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: fit-content;
+        justify-content: center !important;
+        align-items: center !important;
+        margin-left: 30px;
+    }
 
+    :where(.css-dev-only-do-not-override-ixblex).ant-input-textarea-show-count>.ant-input {
+        height: 100%;
+        width: 90%;
+        margin-left: 12px;
+        padding: 8px;
+    }
+
+}
