--- a/src/Components/EventDetails/EventDetail.css
+++ b/src/Components/EventDetails/EventDetail.css
@@ -105,7 +105,7 @@ a{
 
 
 
-@media (max-width: 1000px) {
+@media only screen and (min-width: 320px) and (max-width: 1000px) {
    .contenedor-detalle-evento{
     display: flex;
     flex-direction: column !important
