--- a/src/Components/Checkout/Checkout.css
+++ b/src/Components/Checkout/Checkout.css
@@ -48,3 +48,13 @@
     display: flex;
     justify-content: end;
 }
+
+.contenedor-compra{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.ant-row{
+    flex-wrap: wrap !important;
+}
+
