--- a/src/Components/Tickets/ListTicket.css
+++ b/src/Components/Tickets/ListTicket.css
@@ -25,3 +25,15 @@ font-size: 16px
    width: 250px;
 }
 
+
+@media (max-width: 600px) {
+
+
+    .ticket-dashboard{
+    height: 500px !important;
+    width: 150px !important;
+    margin:1rem !important
+   } 
+   
+  
+ }
