from/componente nosotros_footer_aboutbutton_form

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 .App {
   margin-top: 6rem;
-  
+  display: flex;
+  flex-direction: column;
   text-align: center;
+  justify-content: space-between;
+  
 }
 
 .App-logo {
