--- a/src/Components/Filtros/Filtros.css
+++ b/src/Components/Filtros/Filtros.css
@@ -1,40 +1,17 @@
-.categoria{
-display: flex;
-   flex-direction:row;
-   justify-content: space-between;
-   align-items:  center;
-}
-
-.nombre{
+.divContenedor{
     display: flex;
-    align-items: center;
-    
-
-}
-
-.menu-input-filtro{
-    margin-left:2rem;
-    justify-content: center;
-    display: auto;
-}
-
-
-.menu-buscador-input-gral{
-display: flex;
-
-
-}
-
-.col-md-8{
-    width: 100%;
-    display: auto;
-}
-
-.menudefiltros{
-    display: inline-flex;
-    align-items: center;
     flex-wrap: wrap;
-   
+    gap: 3rem;
+    margin: 5px;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+}
+
+.selectFil{
+    border: transparent;
+    border-radius: 8px;
+
 }
 
 
