--- a/src/Components/Sobre Nosotros/AboutUs.css
+++ b/src/Components/Sobre Nosotros/AboutUs.css
@@ -235,3 +235,10 @@
 .card7:hover .aptitudes{
     opacity: 1;
 }
+
+@media only screen and (min-width: 320px) and (max-width: 1000px) {
+    .containerA{
+        display: flex;
+        flex-wrap: wrap;
+    }
+}
