--- a/src/Components/Sobre Nosotros/AboutUs.css
+++ b/src/Components/Sobre Nosotros/AboutUs.css
@@ -104,7 +104,7 @@
 }
 
 .card0 {
-    background: url("https://scontent.faep9-1.fna.fbcdn.net/v/t39.30808-6/280859244_5444831722195200_2702713887295362240_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=K9TU3au_ZYcAX-wTYPa&tn=4Szfj2bsng3KaV2X&_nc_ht=scontent.faep9-1.fna&oh=00_AfACxcTsWxjcpRL-ny4FjauiqKWxo7m-Yi7A6DUp6LiMOw&oe=64032268") center center no-repeat;
+    background: url("https://scontent.faep9-3.fna.fbcdn.net/v/t39.30808-6/330389825_734676398253065_8505389064966960442_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=730e14&_nc_ohc=lNj0WjUcSd8AX-Ra-LT&_nc_ht=scontent.faep9-3.fna&oh=00_AfCq__eZ8G_16dXtBcd8cbK8R-sKJLhU34WQXnU6Usv59w&oe=64079A69") center center no-repeat;
     background-size: cover;
 }
 
