--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -6,12 +6,13 @@
     margin-left: 15%;
     border: 1px solid rgba(114, 112, 112, 0.237);
     width: 70%;
-    margin-top: 5%;
+    margin-top: 2rem;
     padding: 2rem;
+    margin-bottom: 2rem;
 }
 
 .login-form{
-    padding: 10%;
+    padding: 2rem;
 }
 
 .login-form-button{
