--- a/src/Components/Sobre Nosotros/AboutUs.css
+++ b/src/Components/Sobre Nosotros/AboutUs.css
@@ -10,18 +10,23 @@
     align-self: center;
     justify-content: center; 
     margin-top: 20px; 
+    margin-left: 3rem;
+    margin-bottom: 2rem;
+    margin-right: 1rem;
 }
 
 .buttonContacto{
-    background-color: rgb(55, 102, 103) !important;
+    background-color: rgb(55, 103, 55) !important;
     border: transparent;
     border-radius: 8px;
     margin-left: 43%;
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 2rem;
     display: flex;
     justify-content: center;
     align-content: center;
+    color:white
+
 }
 
 .h3{
@@ -29,7 +34,8 @@
 }
 
 .buttonContacto:hover {
-    background-color: rgb(0, 66, 91) !important;
+    background-color: rgb(8, 91, 0) !important;
+    color:white
 }
 
 .cardAbout {
@@ -39,24 +45,28 @@
     border-radius: 999px;
     transition: background 0.8s;
     overflow: hidden;
-    background: rgb(92, 152, 89);
+    background: rgba(195, 217, 194, 0.167);
     box-shadow: 0 70px 63px -60px #000000;
-    margin: 10px; 
+    margin: 5px; 
 
 }
 
 .cardAbout:hover {
     height: 460px;
     width: 300px;
-    background: rgba(92, 152, 89, 0.575);
+    background: rgba(186, 199, 185, 0.575);
     border: transparent;
     border-radius: 10px;
     transition:  1s;
-    background: rgba(92, 152, 89, 0.329);
+    background: rgba(212, 237, 210, 0.329);
     overflow: hidden;
     box-shadow: 0 70px 63px -60px #000;
     display: row;
     flex-direction: column;    
+}
+
+.icon{
+    margin:0.5rem
 }
 
 .aptitudes{
@@ -78,9 +88,10 @@
     margin: 15px;
     opacity: 0;
     transition: opacity 1s;   
-    border: 1px rgba(56, 102, 103, 0.527);
+    border: 1px rgba(56, 103, 69, 0.079);
     border-radius: 20px;
-    background-color: rgba(56, 102, 103, 0.527);
+    background-color: rgba(56, 103, 60, 0.527);
+    
 }
 
 .buttonGitLink {
@@ -240,5 +251,10 @@
     .containerA{
         display: flex;
         flex-wrap: wrap;
+    }
+    .containerA{
+     
+        margin-left: 0.5rem;
+       
     }
 }
