--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -11,6 +11,33 @@
     margin-bottom: 2rem;
 }
 
+.contenedor-form-contacto{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+     margin-left: 15%;
+     border: 1px solid rgba(114, 112, 112, 0.237);
+     width: 70%;
+     margin-top: 2rem;
+     padding: 2rem;
+     margin-bottom: 2rem;
+ }
+
+ @media (max-width: 600px) {
+
+    .contenedor-form-contacto{
+        display: flex;
+        flex-direction: column;
+        overflow: hidden !important;
+        justify-content: start !important;
+        align-self: flex-start !important;
+        margin-left: 0px !important;
+        width: 100% !important;
+        margin: 0.5rem !important;
+    }
+}
+
 .login-form{
     padding: 2rem;
 }
