--- a/src/Components/Sobre Nosotros/AboutUs.css
+++ b/src/Components/Sobre Nosotros/AboutUs.css
@@ -4,7 +4,7 @@
    display: flex;
     flex-wrap: wrap;
     margin: auto;
-    border: 5px;
+    border: 15px;
     padding: 5px;
     gap: 15px;
     align-self: center;
@@ -21,8 +21,11 @@
     border-radius: 8px;
     
     margin-top: 10px;
+    margin-left: 43%;
     margin-bottom: 2rem;
     display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
     justify-content: center;
     align-content: center;
     color:white
@@ -47,7 +50,8 @@
     overflow: hidden;
     background: rgba(195, 217, 194, 0.167);
     box-shadow: 0 70px 63px -60px #000000;
-    margin: 5px; 
+    margin: 20px; 
+    gap: 15px;
 
 }
 
@@ -115,7 +119,7 @@
 }
 
 .card0 {
-    background: url("https://scontent.faep9-3.fna.fbcdn.net/v/t39.30808-6/330389825_734676398253065_8505389064966960442_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=730e14&_nc_ohc=lNj0WjUcSd8AX-Ra-LT&_nc_ht=scontent.faep9-3.fna&oh=00_AfCq__eZ8G_16dXtBcd8cbK8R-sKJLhU34WQXnU6Usv59w&oe=64079A69") center center no-repeat;
+    background: url("https://scontent.faep9-1.fna.fbcdn.net/v/t39.30808-6/280859244_5444831722195200_2702713887295362240_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=maVlGh5QOCgAX_stiAy&_nc_ht=scontent.faep9-1.fna&oh=00_AfCcEWWnD2HbMe5p28oIpCU6K8p0EH2m_A3XanLflCNfzQ&oe=640EFFE8") center center no-repeat;
     background-size: cover;
 }
 
